# AI-Benchmarking-Web-App

./: README.md  data_download.py  pyproject.toml  sample.json
data/: gaia_loader.py
streamlit/: app.py
streamlit/page/: model_evaluation.py  visualization.py
streamlit/services/: db_connection.py  openai_client.py
tests/: test_openai_client.py
