[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.38.0"
boto3 = "^1.35.27"
openai = "0.28"
tiktoken = "^0.7.0"
pypdf2 = "^3.0.1"
pytesseract = "^0.3.13"
pillow = "^10.4.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
pyodbc = "^5.1.0"
ipython = "^8.27.0"
bcrypt = "^4.2.0"
plotly = "^5.24.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
